tests/language_modules/06_arrays/invalid_semantics/array_element_type_mismatch.vf
module ArrayElementTypeMismatch

procedure main()
is
    let values: Array<Double, 3> = [1, 2, 3]
    check true
end main

end ArrayElementTypeMismatch